lesson-1 exercise-2 done

--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 40px;
+  padding-left: 10px;
 }
 
 .App-header {
   background-color: #222;
-  height: 50px;
+  height: 70px;
   padding: 20px;
   color: white;
   text-align: left;
@@ -24,6 +25,7 @@
 
 .App-content {
   padding-top: 20px;
+  padding-right: 40px;
   font-size: large;
 }
 
@@ -31,10 +33,12 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 .search {
   padding: 5px 0 20px 0;
 }
